[package]
name = "torSearch-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
reqwest = { version = "0.12.24", features = ["blocking", "socks"] }
result = "1.0.0"
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = "1.48.0"
